src/css/index.css
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;

}
html {
    overflow: scroll;
    overflow-x: hidden;
}
::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
    background: transparent;  /* optional: just make scrollbar invisible */
}
/* optional: show position indicator in red */
::-webkit-scrollbar-thumb {
    background: #FF0000;
}

body {
    margin: 0;
    width:100vw;
    overflow-x: hidden;
    overflow-y: visible;
    background: #141C24;

}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
main,
menu,
nav,
section,
summary {
    display: block;
}
/*h1 {*/
/*    font-size: 3.2em;*/
/*    line-height: 1.1;*/
/*}*/

h1,h2,h3,h4,h5,h6 {
    margin: 0;
}

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    outline: 0;
}

*:before,
*:after {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }

a {
    color: black;
    text-decoration: none;
}

a:hover {

}

a:active,
a:hover {
    outline: 0;
}

img {
    border: 0;
}

